[package]
name = "sam-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam-rs = { path = "../sam-rs" }
onnxruntime = { git = "https://github.com/karelnagel/onnxruntime-rs" }
opencv = "0.78.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
