[package]
name = "sam-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnxruntime = { git = "https://github.com/karelnagel/onnxruntime-rs" }
opencv = "0.78.2"
tch = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
