[package]
name = "sam-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { git = "https://github.com/karelnagel/burn" }
burn-ndarray = { git = "https://github.com/karelnagel/burn" }
burn-tch = { git = "https://github.com/karelnagel/burn" }
home = "0.5.5"
image = "0.24.6"
md-5 = "0.10.5"
ndarray = "0.15.6"
# onnxruntime = { git = "https://github.com/karelnagel/onnxruntime-rs" }
opencv = "0.78.2"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
simd-json = "0.9.2"
tch = "0.11.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
