[package]
name = "sam-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sam-rs = { path = "../../sam-rs" }
flume = "0.10.14"
burn = { git = "https://github.com/karelnagel/burn" }
burn-ndarray = { git = "https://github.com/karelnagel/burn" }
burn-tch = { git = "https://github.com/karelnagel/burn" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
